--- a/.github/workflows/NetFramework.yml
+++ b/.github/workflows/NetFramework.yml
@@ -24,4 +24,4 @@ jobs:
       run: nuget restore therapyDB.sln
 
     - name: Build the Solution
-      run: msbuild therapyDB.sln
+      run: msbuild therapyDB.sln /p:Configuration=Release
